prusti-tests/tests/parse/ui/predicate_fail-2.stderr
error: Cannot use `#[predicate]` on bodyless functions
  --> $DIR/predicate_fail-2.rs:11:1
   |
11 | fn result_is_one() -> bool;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[predicate]` can only be used on function definitions
  --> $DIR/predicate_fail-2.rs:15:1
   |
15 | static FOO: usize = 0;
   | ^^^^^^

error: `#[predicate]` is incompatible with other Prusti attributes
  --> $DIR/predicate_fail-2.rs:21:1
   |
21 | / fn something() -> bool {
22 | |     true
23 | | }
   | |_^

error: `#[predicate]` is incompatible with other Prusti attributes
  --> $DIR/predicate_fail-2.rs:29:1
   |
29 | / fn other_thing() -> bool {
30 | |     false
31 | | }
   | |_^

error: aborting due to 4 previous errors

